# tradeify-backend

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml  run_trading_bot.py
app/: main.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  bot.py  referrals.py  transactions.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  referral.py  transaction.py  user.py
app/schemas/: admin.py  auth.py  bot.py  transaction.py  user.py
app/services/: mail.py  outcome_cycle.py  referral.py  seed.py  trading_engine.py
db/: schema.sql
scripts/: check_db.py
tests/: test_account_outcomes.py  test_bot_trade.py  test_deposit_screenshot.py  test_referral_bonus.py  test_trading_engine.py
